# M210VideoStreamReader

./: CMakeLists.txt  main.cpp
VideoStreamReader/: CMakeLists.txt  SocketFileServer.cpp  SocketFileServer.h  TCPServer.cpp  TCPServer.h  main.cpp
VideoStreamReader/common/: UserConfig.txt
inc/: dji_camera_manager.hpp  dji_platform_manager.hpp
linux_helper/: dji_linux_helpers.cpp
osdk-core/: CMakeLists.txt
